[metadata]
name = auglib
author = Johannes Wagner, Andrea Crespi
author-email = jwagner@audeering.com, acrespi@audeering.com
url = https://gitlab.audeering.com/tools/pyauglib/
project-urls =
    Documentation = http://tools.pp.audeering.com/pyauglib/
description = Python wrapper for auglib
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = audio, tools, data augmentation, audeering
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audata>=0.5.10
    audinterface >=0.3.2,<0.5.0
    audobject >=0.3.3,<0.5.0
    humanfriendly
    sounddevice
    scipy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=auglib
    --cov-fail-under=85
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
