[metadata]
name = auglib
author = Johannes Wagner, Andrea Crespi
author_email = jwagner@audeering.com, acrespi@audeering.com
url = https://gitlab.audeering.com/tools/pyauglib/
project_urls =
    Documentation = http://tools.pp.audeering.com/pyauglib/
description = Python wrapper for auglib
long_description = file: README.rst, CHANGELOG.rst
license = audEERING
license_file = LICENSE
keywords = audio, tools, data augmentation, audeering
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audformat >=0.13.0
    audinterface >=0.8.0
    audiofile >=0.4.0
    audobject >=0.6.1
    sounddevice  # remove with 1.0.0
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=auglib
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
